--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -628,9 +628,9 @@
                         title: {
                             verticalAlignment: 'bottom',
                             text: this._title,
-                            subtitle: {
-                                text: this._subtitle,
-                                font: {weight: 600, size: 20}
+                            font: {
+                                family: 'Noto Sans',   // 제목 폰트 변경
+                                size: 24,          // 제목 폰트 크기 조절
                             }
                         },
                         value: this._initialValue
