--- a/src/main/resources/templates/fragments/qualityModal.html
+++ b/src/main/resources/templates/fragments/qualityModal.html
@@ -23,7 +23,7 @@
                     14:00
                 </td>
                 <td>담당자</td>
-                <td th:text="${process.order.employee.username}">관리자</td>
+                <td th:text="${process.processDisplayName}">담당자</td>
             </tr>
             <tr>
                 <td>융용온도</td>
