--- a/src/main/resources/templates/employee/employeeList.html
+++ b/src/main/resources/templates/employee/employeeList.html
@@ -91,7 +91,7 @@
     </th:block>
     <nav th:if="${!paging.isEmpty()}">
         <ul class="pagination justify-content-center">
-            <li class="page-item" th:classappend="${paging.first} ? 'disabled'">
+            <li class="page-item page-first" th:classappend="${paging.first} ? 'disabled'">
                 <a class="page-link" th:href="@{|?page=0|}"><i
                         class="bi bi-chevron-double-left"></i>처음</a>
             </li>
@@ -100,13 +100,13 @@
             </li>
             <li class="page-item" th:each="page:${#numbers.sequence(0,paging.totalPages -1)}"
                 th:classappend="${page==paging.number}?'active'"
-                th:if="${page >= paging.number -4 and page <= paging.number +4}">
+                th:if="${page >= paging.number -2 and page <= paging.number +2}">
                 <a class="page-link" th:text="${page + 1}" th:href="@{|?page=${page}|}">1</a></li>
             <li class="page-item" th:classappend="${!paging.hasNext()}?'disabled'">
                 <a class="page-link pe-0" th:href="@{|?page=${paging.number +1}|}">다음<i
                         class="bi bi-chevron-right"></i></a>
             </li>
-            <li class="page-item" th:classappend="${paging.last} ? 'disabled'">
+            <li class="page-item page-last" th:classappend="${paging.last} ? 'disabled'">
                 <a class="page-link " th:href="@{|?page=${paging.totalPages -1}|}">마지막<i
                         class="bi bi-chevron-double-right"></i></a>
             </li>
