--- a/src/main/resources/templates/process/processList.html
+++ b/src/main/resources/templates/process/processList.html
@@ -68,24 +68,24 @@
             </colgroup>
             <thead>
             <tr>
-                <th colspan="1" class="ps-4">lotNumber</th>
+                <th colspan="1" class="ps-md-4 ps-sm-3">lotNumber<span class="mobile-br2"></span></th>
                 <!--<th>제품명</th>-->
-                <th>금형온도</th>
-                <th>충전시간</th>
-                <th>최고사출압</th>
+                <th>금형<span class="mobile-br"></span>온도</th>
+                <th>충전<span class="mobile-br"></span>시간</th>
+                <th>최고<span class="mobile-br"></span>사출압</th>
             </tr>
             <tr>
 <!--                <th>보압끝점</th>-->
-                <th class="ps-4">공정일자</th>
-                <th>라벨</th>
-                <th>검수결과</th>
-                <th>상세보기</th>
+                <th class="ps-md-4 ps-sm-3">공정일자<span class="mobile-br2"></span></th>
+                <th>라벨<span class="mobile-br2"></span></th>
+                <th>검수<span class="mobile-br"></span>결과</th>
+                <th>상세<span class="mobile-br"></span>보기</th>
             </tr>
             </thead>
             <tbody>
             <th:block th:each="process : ${processes}">
                 <tr>
-                    <td colspan="1" th:text="${process.lotNumber}" class="ps-4">lotNumber</td>
+                    <td colspan="1" th:text="${process.lotNumber}" class="ps-md-4 ps-sm-3">lotNumber</td>
                     <!--<td th:text="${process.order.productName}">EVA</td>-->
                     <td th:text="${process.standard.moldTemperature}">50</td>
                     <td th:text="${process.standard.timeToFill}">50</td>
@@ -93,7 +93,7 @@
                 </tr>
                 <tr>
 <!--                    <td th:text="${process.standard.screwPosEndHold}">50</td>-->
-                    <td th:text="${#temporals.format(process.processDate,'MM-dd HH:mm:ss')}" class="ps-4">20-00-00 00:00</td>
+                    <td th:text="${#temporals.format(process.processDate,'MM-dd HH:mm:ss')}" class="ps-md-4 ps-sm-3">20-00-00 00:00</td>
                     <td th:text="${process.standard.productLabel}"></td>
                     <td><span th:if="${process.standard.qualityCheck != null}" th:text="${process.standard.qualityCheck.checkResult}"></span></td>
                     <td>
@@ -118,7 +118,7 @@
     </div>
     <nav th:if="${!processes.isEmpty()}">
         <ul class="pagination justify-content-center">
-            <li class="page-item" th:classappend="${processes.first} ? 'disabled'">
+            <li class="page-item page-first" th:classappend="${processes.first} ? 'disabled'">
                 <a class="page-link" th:href="@{|?page=0|}"><i
                         class="bi bi-chevron-double-left"></i>처음</a>
             </li>
@@ -127,13 +127,13 @@
             </li>
             <li class="page-item" th:each="page:${#numbers.sequence(0,processes.totalPages -1)}"
                 th:classappend="${page==processes.number}?'active'"
-                th:if="${page >= processes.number -4 and page <= processes.number +4}">
+                th:if="${page >= processes.number -2 and page <= processes.number +2}">
                 <a class="page-link" th:text="${page + 1}" th:href="@{|?page=${page}|}">1</a></li>
             <li class="page-item" th:classappend="${!processes.hasNext()}?'disabled'">
                 <a class="page-link pe-0" th:href="@{|?page=${processes.number +1}|}">다음<i
                         class="bi bi-chevron-right"></i></a>
             </li>
-            <li class="page-item" th:classappend="${processes.last} ? 'disabled'">
+            <li class="page-item page-last" th:classappend="${processes.last} ? 'disabled'">
                 <a class="page-link " th:href="@{|?page=${processes.totalPages -1}|}">마지막<i
                         class="bi bi-chevron-double-right"></i></a>
             </li>
