--- a/src/main/resources/templates/material/createMaterialForm.html
+++ b/src/main/resources/templates/material/createMaterialForm.html
@@ -30,7 +30,9 @@
                         <div th:each="err : ${#fields.allErrors()}" th:text="${err}"></div>
                     </div>
                     <div class="mb-2">
-                        <p>3일 뒤 시점의 발주 수량 예측입니다</p>
+                        <p>3일 뒤 시점의 적합한 발주 수량을 예측합니다.<br>
+                            첫 번째 기준 날짜를 선택하시면 자동으로 연속된 3일의 날짜가 선택됩니다.<br>
+                            각 날짜의 발주 수량을 입력하여 예측을 요청하세요.</p>
                         <label  class="form-label fw-bold">원재료</label>
                         <div class="d-flex gap-2">
                             <select class="form-control w-75" id="materialSelect" onchange="syncMaterialName(this.value)" th:field="*{orders[0].materialName2}">
